@@ -32,6 +32,7 @@
 #include "gimpdockable.h"
 #include "gimpdockwindow.h"
 #include "gimpsessioninfo-aux.h"
+#include "gimpsessionmanaged.h"
 
 
 /*  public functions  */
@@ -280,29 +281,4 @@ gimp_session_info_aux_deserialize (GScanner  *scanner,
     gimp_session_info_aux_free (aux_info);
 
   return token;
-}
-
-void
-gimp_session_info_aux_set_list (GtkWidget *dialog,
-                                GList     *aux_list)
-{
-  /* FIXME: make the aux-info stuff generic */
-
-  if (GIMP_IS_DOCK_WINDOW (dialog))
-    gimp_dock_window_set_aux_info (GIMP_DOCK_WINDOW (dialog), aux_list);
-  else if (GIMP_IS_DOCKABLE (dialog))
-    gimp_dockable_set_aux_info (GIMP_DOCKABLE (dialog), aux_list);
-}
-
-GList *
-gimp_session_info_aux_get_list (GtkWidget *dialog)
-{
-  /* FIXME: make the aux-info stuff generic */
-
-  if (GIMP_IS_DOCK_WINDOW (dialog))
-    return gimp_dock_window_get_aux_info (GIMP_DOCK_WINDOW (dialog));
-  else if (GIMP_IS_DOCKABLE (dialog))
-    return gimp_dockable_get_aux_info (GIMP_DOCKABLE (dialog));
-
-  return NULL;
 }
